# ROS2_smartcar

./: frames_2025-10-28_16.35.24.gv  frames_2025-10-28_16.36.37.gv  frames_2025-10-28_16.37.18.gv  frames_2025-10-28_16.38.06.gv  frames_2025-10-28_17.21.03.gv  frames_2025-10-28_21.57.51.gv  frames_2025-10-29_12.41.30.gv  frames_2025-10-30_17.33.48.gv  frames_2025-10-30_17.43.13.gv  frames_2025-11-04_13.59.37.gv  frames_2025-11-05_00.46.34.gv  frames_2025-11-05_12.17.53.gv
install/car_gazebo_plugin/share/car_gazebo_plugin/: car_gazebo.launch.py  local_setup.dsv  local_setup.sh  package.xml
install/car_gazebo_plugin/share/car_gazebo_plugin/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  car_gazebo_pluginConfig.cmake
install/smart_car/lib/smart_car/: joint_state_publisher  wheel_odometry
install/smart_car/share/smart_car/: local_setup.dsv  local_setup.sh  package.xml
install/smart_car/share/smart_car/cmake/: smart_carConfig.cmake
install/smart_car/share/smart_car/config/: ekf_local.yaml  nav2_params.yaml
install/smart_car/share/smart_car/launch/: gazebo.launch.py  localization.launch.py  (+2 more)
install/smartcar_msgs/share/smartcar_msgs/: local_setup.sh  package.xml
log/: latest_build
src/smart_car/: CMakeLists.txt
src/smart_car/config/: ekf_local.yaml  nav2_params.yaml
src/smart_car/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py
src/smart_car/rviz/: smartcar.rviz
src/smart_car/scripts/: joint_state_publisher.py  wheel_odometry.py
(+11 files in other folders)
